finalize DRT post sim run class incl. test